# lib_sdlpp

./: API_REFERENCE.md  CHANGELOG.md  CMakeLists.txt  QUICK_REFERENCE.md  README.md  parse_enum.py
.github/workflows/: ci.yml
cmake/: sdlpp.pc.in  sdlppConfig.cmake.in  sdlppTargets-dependencies.cmake.in
demo/: CMakeLists.txt  blob.cc  demo.cc  demo.hh  init.cc  plasma.cc  sys_info.cc  ttf_demo.cc
docs/: DDA_IMPLEMENTATION_PLAN.md  DISPLAY_USAGE.md  Doxyfile.in  PALETTE_DESIGN.md  RENDERER_TEXTURE_USAGE.md  SEMANTIC_SIGN_CORRECTNESS.md  SIGN_CORRECTNESS.md  SURFACE_RENDERER_IMPLEMENTATION_PLAN.md  TRIANGLE_GEOMETRY_USAGE.md  WINDOW_USAGE.md  WRAPPING_GUIDELINES.md  app_framework.md  container_support.md  expected_wrapper.md  geometry_refactoring_implementation.md  geometry_refactoring_proposal.md  geometry_refactoring_verification.md  pair_tuple_support.md  string_utils_summary.md
examples/: CMakeLists.txt
examples/app/: example_app_builder.cc  example_basic_app.cc  example_callbacks.cc  example_game_app.cc  example_scene_app.cc
examples/audio/: example_audio_callback.cc  example_audio_tone.cc  example_audio_wav.cc
examples/config/: example_hints.cc  example_properties.cc
examples/core/: example_error.cc  example_failsafe_logger.cc  example_log.cc  example_time.cc  example_timer.cc  example_version.cc
examples/detail/: example_formatters.cc  example_string_utils.cc
examples/events/: example_event_category.cc  example_events.cc
examples/input/: example_gamepad.cc  example_haptic.cc  example_hidapi.cc  example_joystick.cc  example_keyboard.cc  example_mouse.cc  example_pen.cc  example_sensor.cc  example_touch.cc
examples/io/: example_async_io.cc  example_filesystem.cc  example_iostream.cc  example_load_file_async.cc  example_storage.cc
examples/system/: example_clipboard.cc  example_cpu.cc  example_intrinsics.cc  example_locale.cc  example_misc.cc  example_platform.cc  example_platform_enhanced.cc  example_process.cc  example_shared_object.cc
examples/tests/: CMakeLists.txt  test_async_io_simple.cc  test_expected.cc  test_gl_simple.cc  test_properties_simple.cc  test_timer_simple.cc  test_version_check.cc
examples/ui/: example_dialog.cc  example_message_box.cc  example_tray.cc
examples/utility/: example_dimension_concepts.cc  example_external_geometry.cc  example_guid.cc  example_simple_external_geometry.cc  example_type_safe_dimensions.cc
examples/video/: example_camera.cc  example_dda_comprehensive.cc  example_gl.cc  example_gpu_triangle.cc  example_window_renderer.cc
ext/: CMakeLists.txt
ext/bsw/: CMakeLists.txt
ext/doctest/: CMakeLists.txt
ext/euler/: CMakeLists.txt
ext/expected/: CMakeLists.txt
ext/failsafe/: CMakeLists.txt
ext/neutrino_math/: CMakeLists.txt
ext/sdl2/: CMakeLists.txt
ext/sdl3/: CMakeLists.txt
ext/sdl_ttf/: CMakeLists.txt
ext/strong_type/: CMakeLists.txt
include/sdlpp/: audio.hh  call.hh  color.hh  events.hh  geometry.hh  input.hh  io.hh  iterator.hh  object.hh  palette.hh  pixel_format.hh  render.hh  rtc.hh  sdl2.hh  sdlpp.hh  surface.hh  system.hh  texture.hh  timers.hh  ttf.hh  video.hh  window.hh
src/sdlpp/: CMakeLists.txt  system.cc
src/sdlpp/app/: app.cc  game_application.cc
src/sdlpp/audio/: audio.cc  music.cc
src/sdlpp/config/: hints.cc
src/sdlpp/core/: failsafe_backend.cc  log.cc  time.cc
src/sdlpp/events/: event_types.cc  events.cc  keyboard_codes.cc  mouse_codes.cc  system_events.cc
src/sdlpp/font/: font.cc  font_cache.cc  sdl_raster_target.cc
src/sdlpp/image/: image.cc  sdl_surface_adapter.cc
src/sdlpp/input/: game_controller.cc  gamepad.cc  gamepad_types.cc  haptic.cc  hidapi.cc  joystick.cc  joystick_types.cc  mouse.cc  pen.cc  pen_types.cc  sensor.cc  sensor_types.cc  touch.cc
src/sdlpp/io/: async_io.cc  filesystem.cc  io_common.cc  iostream.cc  whence.cc
src/sdlpp/system/: audio.cc  cpu.cc  joystic.cc  platform.cc  power.cc  power_state.cc  process.cc  sensor.cc  touch_device.cc
src/sdlpp/ui/: dialog.cc  message_box.cc  tray.cc
src/sdlpp/utils/: switch_ostream.hh
src/sdlpp/video/: blend_mode.cc  camera.cc  color.cc  cursor.cc  display.cc  geometry.cc  gl.cc  gpu.cc  gpu_defs.cc  pixel_format.cc  pixels.cc  render.cc  renderer.cc  renderer_dda.cc  surface.cc  surface_renderer.cc  texture.cc  ttf.cc  window.cc
src/unittest/: CMakeLists.txt  test_from_to_string.cc  test_ttf_caller.cc
test/: CMakeLists.txt  main.cc  test_type_safety.cc
test/audio/: test_audio.cc  test_audio_enum_operators.cc
test/config/: test_config_enum_operators.cc  test_hints.cc  test_hints_simple.cc  test_properties.cc
test/core/: test_core_enum_operators.cc  test_error.cc  test_failsafe_backend.cc  test_failsafe_backend_debug.cc  test_failsafe_simple.cc  test_log.cc  test_time.cc  test_timer.cc  test_timer_enum_operators.cc  test_version.cc
test/events/: test_event_category.cc  test_events.cc  test_events_enum_operators.cc
test/input/: test_gamepad.cc  test_haptic.cc  test_hidapi.cc  test_input_enum_operators.cc  test_joystick.cc  test_keyboard.cc  test_mouse.cc  test_pen.cc  test_sensor.cc  test_touch.cc
test/io/: test_filesystem.cc  test_filesystem_enum_operators.cc  test_io_common.cc  test_iostream.cc  test_storage.cc
test/system/: test_clipboard.cc  test_cpu.cc  test_intrinsics.cc  test_locale.cc  test_misc.cc  test_platform.cc  test_platform_enhanced.cc  test_process.cc  test_shared_object.cc  test_system_enum_operators.cc
test/ui/: test_dialog.cc  test_message_box.cc  test_tray.cc  test_ui_enum_operators.cc
test/utility/: test_dimension.cc  test_dimension_concepts.cc  test_geometry.cc  test_geometry_concepts.cc  test_geometry_conditional.cc  test_geometry_no_builtin.cc  test_geometry_types.cc  test_guid.cc
test/video/: test_camera.cc  test_color.cc  test_display.cc  test_gl.cc  test_gpu.cc  test_palette.cc  test_pixels.cc  test_renderer.cc  test_renderer_geometry.cc  test_surface.cc  test_video_enum_operators.cc  test_window.cc  test_window_geometry.cc
website/: README.md  docusaurus.config.js  package.json  sidebars.js
website/docs/: intro.md
(+182 files in other folders)
